# pai-jizhang

./: .gitignore  README.md  claude.md  generate_icons.py  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AmountInput.tsx  CategoryPicker.tsx  Layout.tsx
src/pages/: AddExpense.tsx  CategoryManage.tsx  ExpenseList.tsx  Statistics.tsx
