[package]
name = "pai-jizhang"
version = "0.3.0"
description = "派记账 - 个人记账应用"
authors = ["hearain"]
edition = "2021"

[lib]
name = "pai_jizhang_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
tauri-plugin-dialog = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
